# helloworld

./: .gitignore  .python-version  Dockerfile  README.md  pyproject.toml
.github/workflows/: actions.yaml  build-and-deploy.yaml  build_docker.yaml  sonarcloud_analysis.yaml  trivy_scan.yaml
fast_zero/: Dockerfile  app.py  pyproject.toml  sonar-project.properties
