[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Marina <marinamagaldib@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
