[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Marina <marinamagaldib@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = {extras = ["standart"], version = "^0.112.2"}

[tool.poetry.scripts]
start = "uvicorn: app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
