[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Marina <marinamagaldib@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"

[tool.poetry.scripts]
start = "uvicorn:fast_zero.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
